--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-proposal-template.*
+proposal-bbreisch-maalvarez-lukebeukelman.*
 
-!proposal-template.pdf
-!proposal-template.tex
+!proposal-bbreisch-maalvarez-lukebeukelman.pdf
+!proposal-bbreisch-maalvarez-lukebeukelman.tex
