--- a/adhocmessaging/app/src/main/AndroidManifest.xml
+++ b/adhocmessaging/app/src/main/AndroidManifest.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-sdk android:minSdkVersion="19" />
     <uses-permission
-        android:required="true"
-        android:name="android.permission.ACCESS_FINE_LOCATION" />
+        android:name="android.permission.ACCESS_FINE_LOCATION"
+        android:required="true" />
     <uses-permission
-        android:required="true"
-        android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        android:name="android.permission.ACCESS_COARSE_LOCATION"
+        android:required="true" />
     <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES" />
     <uses-permission
-        android:required="true"
-        android:name="android.permission.ACCESS_WIFI_STATE"/>
+        android:name="android.permission.ACCESS_WIFI_STATE"
+        android:required="true" />
     <uses-permission
-        android:required="true"
-        android:name="android.permission.CHANGE_WIFI_STATE"/>
+        android:name="android.permission.CHANGE_WIFI_STATE"
+        android:required="true" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission
-        android:required="true"
-        android:name="android.permission.INTERNET"/>
-
+        android:name="android.permission.INTERNET"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -29,6 +32,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Adhocmessaging"
         tools:targetApi="31">
+        <receiver
+            android:name=".WiFiDirectBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+
+        <activity
+            android:name=".WiFiDirectActivity"
+            android:exported="false"
+            android:label="@string/title_activity_wi_fi_direct"
+            android:theme="@style/Theme.Adhocmessaging" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
